解决了footer遮挡发布按钮的问题

--- a/css/WPReliableMD_Admin.css
+++ b/css/WPReliableMD_Admin.css
@@ -1,5 +1,9 @@
 .arrow {
-    margin-left: 0px !important;
+	margin-left: 0px !important;
+}
+
+#wpfooter {
+	display: none;
 }
 
 #wpbody-content {
